# geospatial-studio-core

./: .coveragerc  .dockerignore  .env.docker.example  .env.example  .envrc.example  .flake8  .gitignore  .pre-commit-config.yaml  .secrets.baseline  .whitesource  CODEOWNERS  CONTRIBUTING.md  Dockerfile  Dockerfile.cronjob  README.md  THIRD-PARTY-LICENSES.txt  alembic.ini  dev.sh  logging.ini  pyproject.toml  pytest.ini
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml  verify-signed-commits.yml
components/inference-planner/: Dockerfile.template  README.md
components/postprocess-generic-single/: Dockerfile.template  README.md
components/push_to_geoserver/: README.md  push_to_geoserver.py
components/run-inference/: Dockerfile.template  README.md  run-inference.py
components/run-inference-vllm/: run-inference-vllm.py
components/template_process/: Dockerfile.template  README.md  deploy_template_process.yaml
components/terrakit_data_fetch/: Dockerfile.template  README.md
components/terratorch_inference/: Dockerfile.template  README.md
components/url-connector-single/: README.md  url_connector_single.py
docs/: RATE_LIMITING.md  README-generic-processors-guide.md  async_achitecture.md  contributing_process.md  generic-processors-guide.md
general_libraries/orchestrate_wrapper/: orchestrate_wrapper.py
gfmstudio/: __main__.py  celery_worker.py  config.py  cos_client.py  exceptions.py  log.py  main.py  redis_client.py  websockets.py
gfmstudio/amo/: Dockerfile  __init__.py  api.py  schemas.py  services.py  task_manager.py  utils.py
gfmstudio/amo/a-model-00-name-chart/: .helmignore  Chart.yaml  values.yaml
gfmstudio/amo/a-model-01-name-chart/: README.md  deploy_model.py  vllm-inference-server-template.yaml
gfmstudio/amo/scripts/: model-artifact-load.sh
gfmstudio/auth/: api_key_utils.py  authorizer.py  db_session.py  models.py  rate_limit_middleware.py  routes.py  schemas.py  utils.py
gfmstudio/auth/db_migrations/: env.py  script.py.mako
gfmstudio/common/: models.py  schemas.py
gfmstudio/common/api/: crud.py  healthz.py  utils.py
gfmstudio/common/db/: __init__.py  base.py  session.py
gfmstudio/data_advisor/: README.md  data_advisor.py  helper_functions.py
gfmstudio/db_migrations/: env.py
gfmstudio/db_migrations/seed_data/: 00-inf-data-sources.sql  01-inf-models.sql  02-inf-infrences.sql  05-ft-backbone-models.sql  06-ft-tune-templates.sql  07-ft-datasets.sql  08-ft-tunes.sql
gfmstudio/db_migrations/versions/: 14f9c61324e7_add_df_logs_key.py  7d8d6eda6ffb_inf_task_tbl_inference_id.py  8060f622f741_inf_initial_migrations.py  86e4e3e816d2_ft_initial_migrations.py  9f02b7f65a7d_added_table_for_generic_processor_.py  a1b2c3d4e5f6_add_groups_and_artifact_permissions.py  (+5 more)
gfmstudio/fine_tuning/: api.py  dataset_schemas.py  models.py  schemas.py  subscribe_new_mlflow_run.py
gfmstudio/groups/: __init__.py  api.py  models.py  schemas.py  visibility.py
gfmstudio/inference/: errors.py  redis_handler.py  services.py  types.py
gfmstudio/jira/: jira_apis.py  schemas.py  services.py
pipeline-processor-image/: Dockerfile.terratorch
pipelines/: .build_cache.txt  .gitignore  Dockerfile  Dockerfile.terratorch  Dockerfile.vllm  README.md  THIRD-PARTY-LICENSES.txt  entrypoint.sh  healthcheck.sh  requirements.txt
scripts/: create_user.py  load_data.py
tests/: conftest.py
tests/integration/: api_data_sources.py  api_inferences.py  api_models.py  test_inference_data_sources.py  test_inference_inference.py  test_inference_models.py  test_studio_authentication.py  utils.py
tools/curated-upload/: Dockerfile  README.md
tools/gdal-base/: Dockerfile
tools/mlflow/: Dockerfile.mlflow  Dockerfile.mlflowsync  README.md  mlflow_runs_insert_trigger.psql  requirements.txt  subscribe_new_mlflow_run.py
tools/terratorch/caikit-base/: .dockerignore  Dockerfile  Dockerfile.base  README.md  entrypoint.sh  pyproject.toml  pytest.ini  requirements.txt  setup.py
tools/terratorch/caikit-base/cleanup/: cleanup.py  cleanup.sh  crontab
tools/terratorch/caikit-base/geospatial_extension/: __init__.py
tools/terratorch/caikit-base/geospatial_extension/blocks/: __init__.py
tools/terratorch/caikit-base/geospatial_extension/blocks/geospatial/: convert_checkpoints.py  data_loader.py  exceptions.py  geospatial_imagery.py  metrics.py  metrics_utils.py  settings.py  start_metrics_server.py  utils.py
tools/terratorch/caikit-base/geospatial_extension/config/: __init__.py  config.yml  config_validator.py
tools/terratorch/caikit-base/geospatial_extension/data_model/: __init__.py  image.py
tools/terratorch/caikit-base/geospatial_extension/data_model/interfaces/: __init__.py
tools/terratorch/caikit-base/runtime_template/: readiness_check.py  run_with_gateway.sh  start_runtime.py
tools/terratorch/caikit-base/scripts/: bootstrap.sh  tt-compatibility-script.py
tools/terratorch/caikit-base/scripts/development/: locutils.py
tools/terratorch/caikit-base/swagger/: combined.swagger.prithvi-100m-hls2-lulc-kenya.json  combined.swagger.prithvi-baseline-hls2-agb.json  combined.swagger.prithvi-swin-90m-hls2-us-lulc.json  combined.swagger.prithvi-vit-300m-hls2-us-fire-scars.json  combined.swagger.prithvi-vit-300m-hls2-us-flood-segmentation.json
tools/terratorch/caikit-base/tests/geospatial_extension/blocks/geospatial/: test_metrics_utils.py
tools/terratorch/caikit-base/webhooks/: webhooks.py
(+92 files in other folders)
