# © Copyright IBM Corporation 2025
# SPDX-License-Identifier: Apache-2.0



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "geospatial_extension"
version = "0.1.0"
description = ""
authors = []
maintainers =["Catherine Wanjiru <catherine.wanjiru@ibm.com>"]
readme = "README.md"
repository = "https://github.ibm.com/GeoFM-Finetuning/geospatial-model-inference-service"
keywords = ["gfm", "studio", "geospatial", "inference"]
packages = [{ include = "geospatial_extension" }]

[tool.poetry.dependencies]
python = "^3.10"
boto3 = "^1.35.50"
cerberus = "^1.3.5"
caikit = {extras = ["runtime-grpc"], version = "^0.27.7"}
requests = "2.32.4"
torch = "2.8.0"
torchvision = "0.17.2"
torchaudio = "2.5.0"
torchmetrics = "1.3.1"
lightning = "2.4.0"
albucore = "0.0.16"
terratorch = {git = "https://github.com/IBM/terratorch.git", branch = "0.99.6"}
tqdm = "^4.66.6"

[tool.poetry.dev-dependencies]
pytest = "7.1.3"
pytest-html = "3.1.1"
pytest-cov = "5.0.0"
pylint = "3.2.0"
pre-commit = "3.7.0"
